Added types in unit test, service and controllers, new classes for test utilities.